src/test/deca/codegen/invalid/objet/debordementPile/PilePleineMethodCall.deca
// Description : pile pleine avec des appels de méthodes
// Resultat : erreur lors de ima -p avec une pile petite


class A{
    
    int get1(int a, int b, int c, int d, int e, int f, int g, int h, int i, int j, int k, int l, int m, int n, int o, int p){
        return 1;
    }
}
{
    A a = new A();
    a.get1(1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1);
}
